--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Python
 description: "some scripts I've written to learn Python "
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-architect
+theme: jekyll-theme-time-machine
 
 gems:
   - jekyll-mentions
